--- a/PokemonGo.RocketAPI/PokemonGo.RocketAPI.Console/Lang/de.json
+++ b/PokemonGo.RocketAPI/PokemonGo.RocketAPI.Console/Lang/de.json
@@ -25,7 +25,7 @@
 	"maxSuperpotions":"Max. Supertränke:",
 	"maxHyperpotions":"Max. Hypertränke:",
 	"maxToppotions":"Max. Top-Tränke:",
-	"maxRazzberrys":"Max. Himmiheeren:",
+	"maxRazzberrys":"Max. Himmihbeeren:",
 	"totalCount":"Gesamtzahl:",
 	"pokemonNotToTransfer":"Pokemon - Nicht zu versenden",
 	"selectAll":"Alle auswählen",
